Fix #114918: Workbench: Negative scaled sculpt mesh artifacts