source/blender/draw/engines/workbench/workbench_engine.cc
@@ -156,7 +156,9 @@ class Instance {
     if (is_object_data_visible) {
       if (object_state.sculpt_pbvh) {
         /* Disable frustum culling for sculpt meshes. */
+        /* TODO(@pragma37): Implement a cleaner way to disable frustum culling.  */
         ResourceHandle handle = manager.resource_handle(float4x4(ob_ref.object->object_to_world));
+        handle = ResourceHandle(handle.resource_index(), ob_ref.object->transflag & OB_NEG_SCALE);
         sculpt_sync(ob_ref, handle, object_state);
         emitter_handle = handle;
       }
